@@ -81,6 +81,7 @@ sub my_new_engine
   my $sEngine = shift;
   $WWW::Search::Test::oSearch = new WWW::Search($sEngine);
   ok(ref($WWW::Search::Test::oSearch), "instantiate WWW::Search::$sEngine object");
+  $WWW::Search::Test::oSearch->env_proxy('yes');
   } # my_new_engine
 
 sub my_test
